# llm-perf-backend

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  test.sh
.github/workflows/: benchmark_cpu_onnxruntime.yaml  benchmark_cpu_openvino.yaml  benchmark_cpu_pytorch.yaml  benchmark_cuda_pytorch.yaml  benchmark_rocm_pytorch.yaml  style.yaml  update_llm_perf_cpu_onnxruntime.yaml  update_llm_perf_cpu_openvino.yaml  update_llm_perf_cpu_pytorch.yaml  update_llm_perf_cuda_pytorch.yaml  update_llm_perf_leaderboard.yaml  update_llm_perf_rocm_pytorch.yaml
dashboard/: dashboard.py  main.py
docker/collector/: Dockerfile
docker/cpu-onnxruntime/: Dockerfile
docker/cpu-openvino/: Dockerfile
docker/cpu-pytorch/: Dockerfile
docker/gpu-cuda/: Dockerfile
llm_perf/: cli.py  dashboard_app.py  hardware.yaml  update_llm_perf_leaderboard.py
llm_perf/benchmark_runners/cpu/: update_llm_perf_cpu_onnxruntime.py  update_llm_perf_cpu_openvino.py  update_llm_perf_cpu_pytorch.py
llm_perf/benchmark_runners/cuda/: update_llm_perf_cuda_pytorch.py
llm_perf/common/: benchmark_runner.py  dashboard.py  dashboard_manager.py  dependency.py  get_top_model_from_hub.py  memory_utils.py  utils.py
src/: cli.py  update_llm_perf_leaderboard.py  utils.py
src/benchmark_runners/: update_llm_perf_cpu_pytorch.py  update_llm_perf_cuda_pytorch.py
src/benchmark_runners/cpu/: update_llm_perf_cpu_onnxruntime.py  update_llm_perf_cpu_openvino.py  update_llm_perf_cpu_pytorch.py
src/benchmark_runners/cuda/: update_llm_perf_cuda_pytorch.py
src/benchmark_runners/rocm/: update_llm_perf_rocm_pytorch.py
src/common/: benchmark_runner.py  get_top_model_from_hub.py  hardware_config.py  utils.py
